# Style-Bert-VITS2

./: inference.py  pyproject.toml
gradio_tabs/: inference.py
style_bert_vits2/: constants.py  tts_model.py
