[tool.poetry]
name = "style-bert-vits2"
version = "0.1.0"
description = ""
authors = ["takemotoooo-eeic <takemoto-kengo2262@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0-cp310-none-macosx_10_9_x86_64.whl"}
pydantic = "^2.7.4"
loguru = "^0.7.2"
pyannote-audio = ">=3.1.0"
pyworld-prebuilt = "^0.3.4.1"
numpy = "<2"
scipy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
